# nix-sqlx-example

./: README.md  flake.nix  sqlx-data.json
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  error.rs  main.rs
flake-parts/: cargo.nix  pre-commit.nix
migrations/: 20230313024200_init.up.sql
