[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { version = "4.0.19", features = ["derive"] }
# serde.workpace = true
# serde_json.workpace = true
tokio = { workspace = true, features = ["full"] }
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = ["offline", "runtime-tokio-rustls", "postgres", "time", "macros", "uuid"] }
